2009-01-09  Sven Herzberg  <sven@imendio.com>

	Added 32 bit support to the server.

	* server/sapwood-server.c (extract_pixmap_single),
	(extract_pixmaps), (pixbuf_open_response_new),
	(pixbuf_open_request_equal): now the server also manages 32-bit
	pixmaps properly

2009-01-08  Sven Herzberg  <sven@imendio.com>

	Properly forward the depth information.

	* engine/sapwood-pixmap.c,
	* engine/sapwood-pixmap.h,
	* engine/sapwood-style.c,
	* engine/theme-pixbuf.c,
	* engine/theme-pixbuf.h: properly forward the depth information into
	the sapwood server

2009-01-08  Sven Herzberg  <sven@imendio.com>

	Added a depth field to the PixbufOpenRequest

	To be able to support both 24-bit and 32-bit windows with proper
	pixmaps, we're going to require being able to separate between the
	requests.

	* engine/sapwood-pixmap.c (sapwood_pixmap_get_for_file): set the depth
	to 24 by default now
	* protocol/sapwood-proto.h: added a depth field, so the engine can
	tell the server which pixmap to provide
	* server/sapwood-server.c (extract_pixmap_single),
	(pixbuf_open_response_new): require the depth to be 24 in any
	situation now
	* tests/double-free.c: set the depth to 24 by default now

2009-01-09  Sven Herzberg  <sven@imendio.com>

	Be able to choose the depth of the pixmap by providing a colormap
	(through a GdkWindow)

	* server/sapwood-server.c (extract_pixmap_single): create a single
	GdkWindow to be able to let it provide the colormap and default depth
	for the 32 bit pixmaps later

2009-01-08  Sven Herzberg  <sven@imendio.com>

	Do the GdkPixbuf rendering with cairo

	* server/sapwood-server.c (extract_pixmap_single): do the rendering
	with cairo; we will have to use this code anyway once we don't have a
	GdkPixmap anymore and use an RGBA cairo_xlib_surface_t

2009-01-08  Sven Herzberg  <sven@imendio.com>

	Test if the server can run the buttonbox demo

	* demos/Makefile.am: added the buttonbox to the tests
	* demos/buttonbox.c (main): return after showing the window if a